# fastoai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: geepilot.py  main.py  ollama.py  ollama_server.py
src/fastoai/: __init__.py  _client.py  applications.py  cache  cli.py  dependencies.py  models.py  pagination.py  requests.py  routing.py  schema.py  serde.py  settings.py  utils.py
src/fastoai/models/: __init__.py  _codegen.py  _metadata.py  _schema.py  _types.py  _utils.py  assistant.py  file.py  key.py  message.py  organization.py  organization_user.py  project.py  project_user.py  run.py  service_account.py  step.py  thread.py  user.py
src/fastoai/routers/: __init__.py  _backend.py  _client.py  _fix.py  _types.py  _utils.py  assistants.py  files.py  models.py  ollama.py
src/fastoai/routers/beta/: __init__.py  assistants.py  messages.py  runs.py  threads.py
src/fastoai/routers/ollama/: __init__.py  assistants.py  file.py  files.py  models.py
src/fastoai/routers/ollama/threads/: __init__.py  messages.py  runs.py
src/fastoai/routers/threads/: __init__.py  messages.py  runs.py
tests/: conftest.py  test_beta_routes.py  test_get_client.py  test_metadata.py
